# x-kernel

./: Cargo.toml  Makefile  NOTICE  README.md  rust-toolchain.toml  starry.mk
.github/workflows/: check.yml  ci.yml  unittest.yml
api/axfeat/: Cargo.toml
api/kapi/: Cargo.toml
api/kapi/src/: io.rs  lib.rs  mm.rs  signal.rs  socket.rs  task.rs  time.rs
api/kcore/: Cargo.toml
api/kcore/src/: futex.rs  lib.rs  lrucache.rs  mm.rs  resources.rs  shm.rs  task.rs  time.rs
api/kfeat/: Cargo.toml
api/kfeat/src/: lib.rs
api/linux_sysno/: build.rs
api/linux_sysno/src/: args.rs  lib.rs  macros.rs  map.rs  set.rs
api/linux_sysno/tests/: test_syscall.rs
api/starry-api/: Cargo.toml
api/starry-api/src/: io.rs  lib.rs  mm.rs  task.rs
api/starry-core/: Cargo.toml
api/starry-core/src/: futex.rs  mm.rs  shm.rs  task.rs
arch/axcpu/: Cargo.toml
arch/axcpu/src/: lib.rs  trap.rs  uspace_common.rs
arch/axhal/: Cargo.toml
arch/axhal/src/: dummy.rs  irq.rs  lib.rs  mem.rs  paging.rs  tls.rs
arch/axipi/src/: event.rs  lib.rs
arch/axplat/: Cargo.toml
arch/axplat-aarch64-crosvm-virt/: Cargo.toml
arch/axplat-aarch64-crosvm-virt/src/: boot.rs  fdt.rs
arch/axplat-aarch64-peripherals/: Cargo.toml
arch/axplat-aarch64-qemu-virt/: Cargo.toml
arch/axplat-aarch64-qemu-virt/src/: boot.rs
arch/axplat-aarch64-raspi/: Cargo.toml
arch/axplat-aarch64-raspi/src/: boot.rs
arch/axplat-loongarch64-qemu-virt/: Cargo.toml
arch/axplat-loongarch64-qemu-virt/src/: boot.rs
arch/axplat-riscv64-qemu-virt/src/: irq.rs
arch/axplat-x86-csv/: Cargo.toml
arch/axplat/src/: console.rs  mem.rs
arch/kcpu/: Cargo.toml
arch/kcpu/src/: active_exception_context.rs  excp.rs  lib.rs  userspace_common.rs  uspace_common.rs
arch/khal/: Cargo.toml  build.rs  linker.lds.S
arch/khal/src/: dtb.rs  dummy.rs  irq.rs  lib.rs  mem.rs  paging.rs  percpu.rs  time.rs  tls.rs
arch/kipi/: Cargo.toml
arch/kipi/src/: event.rs  lib.rs  (+2 more)
configs/: dummy.toml
configs/custom/: x86_64-pc-oslab.toml
configs/targets/: x86_64-unknown-linux-gnu-nostd.json
core/axruntime/: Cargo.toml
core/axtask/: Cargo.toml
core/kernel_elf_parser/: Cargo.toml
core/kpoll/: Cargo.toml
core/ktypes/: Cargo.toml
docs/: code-stats.md
drivers/axdriver/: Cargo.toml
drivers/axdriver_block/: Cargo.toml
drivers/axdriver_display/: Cargo.toml
drivers/axdriver_input/: Cargo.toml
drivers/axdriver_net/: Cargo.toml
drivers/axdriver_virtio/: Cargo.toml
drivers/axdriver_vsock/: Cargo.toml
drivers/block/: Cargo.toml
drivers/display/: Cargo.toml
drivers/display/src/: lib.rs  tests.rs
drivers/driver_base/: Cargo.toml
drivers/driver_base/src/: lib.rs
drivers/kdriver/: Cargo.toml  build.rs
drivers/net/: Cargo.toml
drivers/pci/: Cargo.toml
drivers/rs-fdtree/: Cargo.toml
drivers/rs-fdtree/src/: error.rs  header.rs  lib.rs  node.rs  parsing.rs  pretty_print.rs  standard_nodes.rs
drivers/rs-fdtree/src/kernel_nodes/: chosen.rs  dice.rs  interrupt.rs  memory.rs  mod.rs  reserved_memory.rs
drivers/rs-fdtree/tests/: tests_basic.rs
drivers/virtio/: Cargo.toml
entry/: Cargo.toml
entry/src/: entry.rs  init.sh  main.rs  unittest_simple.rs
fs/axfs/: Cargo.toml
fs/fs-ng-vfs/: Cargo.toml
fs/fs-ng-vfs/src/: fs.rs  lib.rs  mount.rs  path.rs  test_path.rs  test_types.rs  types.rs
fs/fs-ng-vfs/src/node/: dir.rs  file.rs  mod.rs
fs/fs-ng-vfs/tests/: vfs_core_tests.rs
fs/kfs/: Cargo.toml
fs/kfs/src/: disk.rs  fs_operations.rs  lib.rs  path_resolver.rs  test_path_resolver.rs  test_working_context.rs  working_context.rs
fs/kfs/src/fs/: mod.rs
fs/kfs/src/fs/ext4/: fs.rs  inode.rs  mod.rs  util.rs
fs/kfs/src/fs/ext4/ext4_rs/: fs.rs  inode.rs  mod.rs  util.rs
fs/kfs/src/fs/ext4/lwext4/: util.rs
fs/kfs/src/fs/fat/: dir.rs  ff.rs  file.rs  fs.rs  mod.rs  util.rs
fs/kfs/src/highlevel/: file.rs  fs.rs  mod.rs
fs/kfs/tests/: fs_operations_tests.rs  path_resolver_tests.rs  test_fs.rs  test_helpers.rs  working_context_tests.rs
fs/rsext4/: Cargo.toml
init/kruntime/: Cargo.toml
io/axdma/: Cargo.toml
io/axwatchdog/: Cargo.toml
io/fbdevice/: Cargo.toml
io/inputdev/: Cargo.toml
io/kdma/: Cargo.toml
io/kio/: Cargo.toml  README.md  build.rs
io/kio/src/: lib.rs  prelude.rs  test_cursor.rs  test_iobuf.rs  test_seek.rs
io/kio/src/buffered/: mod.rs
io/kio/src/buffered/bufreader/: buffer.rs  mod.rs
io/kio/src/buffered/bufwriter/: mod.rs
io/kio/src/buffered/linewriter/: mod.rs  shim.rs
io/kio/src/iobuf/: ext.rs  impls.rs  mod.rs
io/kio/src/read/: impls.rs  mod.rs
io/kio/src/seek/: impls.rs  mod.rs
io/kio/src/utils/: chain.rs  copy.rs  cursor.rs  empty.rs  iofn.rs  mod.rs  repeat.rs  sink.rs  take.rs
io/kio/src/write/: impls.rs  mod.rs
io/watchdog/: Cargo.toml  README.md
mm/axalloc/: Cargo.toml
mm/axmm/: Cargo.toml
mm/memaddr/: Cargo.toml
mm/memaddr/src/: lib.rs
mm/memaddr/src/core/: mod.rs
mm/memaddr/src/units/: addr.rs  iter.rs  mod.rs  range.rs
mm/memory_set/: Cargo.toml  README.md
mm/memspace/: Cargo.toml
mm/page_table/: Cargo.toml
mm/page_table_entry/: Cargo.toml  README.md
mm/page_table_multiarch/: Cargo.toml  README.md
net/axnet/: Cargo.toml
net/knet/: Cargo.toml
process/kprocess/: Cargo.toml
process/kprocess/src/: lib.rs  process.rs  process_group.rs  session.rs  tests.rs
process/ksignal/: Cargo.toml  build.rs
process/osvm/: Cargo.toml
scripts/: disk.sh  fix_cargo_deps.py  fix_x86_pc_and_deps.py  migrate_axhal.py  refactor_global.py  start.sh
scripts/make/: build.mk  cargo.mk  platform.mk
sync/kspin/: Cargo.toml
util/axklib/: Cargo.toml
util/backtrace/: Cargo.toml
util/backtrace/src/: config.rs  dwarf.rs  error.rs  frame.rs  lib.rs  unwinder.rs
util/backtrace/src/arch/: aarch64.rs  loongarch64.rs  mod.rs  riscv.rs  x86_64.rs
util/backtrace/tests/: basic_tests.rs  test_stubs.rs
util/kinit_setup/: Cargo.toml
util/kinit_setup/src/: lib.rs
util/klogger/: Cargo.toml
util/klogger/src/: lib.rs
util/macros/: Cargo.toml
util/macros/src/: lib.rs
util/unittest/: Cargo.toml
xtask/kconfig-gen/: Cargo.toml
(+498 files in other folders)
