[package]
name = "display"
edition.workspace = true
description = "Common traits and types for graphics device drivers"
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
driver_base = { workspace = true }
unittest.workspace = true
