[package]
name = "driver_base"
edition.workspace = true
description = "Common interfaces for all kinds of device drivers"
documentation = "https://kylin-x-kernel.github.io/driver_base"
keywords = ["driver", "x-kernel"]
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
