[package]
name = "kio"
edition = "2024"
description = "`std::io` for `no_std` environment"
documentation = "https://docs.rs/kio"
keywords = ["io", "no-std"]
categories.workspace = true
version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[features]
alloc = []
default = []

[dependencies]
axerrno.workspace = true
heapless = "0.9"
memchr = { version = "2", default-features = false }

[build-dependencies]
autocfg = "1"
