[package]
name = "memaddr"
description = "Wrappers and helper functions for physical and virtual addresses"
documentation = "https://docs.rs/memaddr"
keywords = ["arceos", "address", "virtual-memory"]

version.workspace = true
edition = "2024"
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
categories.workspace = true

[dependencies]
