[package]
name = "kprocess"
version.workspace = true
edition.workspace = true
authors.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
description = "Process management for X-Kernel"

[dependencies]
kspin = { workspace = true }
lazyinit = "0.2.1"
weak-map = "0.1"

[dev-dependencies]
ctor = "0.4.1"
kspin = { workspace = true, features = ["smp"] }
